fixing alignment
fixing alignment

--- a/assets/evening.css
+++ b/assets/evening.css
@@ -30,10 +30,10 @@ body {position: relative}
 
 h2 {font-family: 'Archivo', serif; font-size: 64px;line-height:70px; letter-spacing:-1.34px;color:#D3D4D4;}
 h3 {font-family: 'Archivo', serif; font-size: 32px;line-height:40px; letter-spacing:-1.34px;color:#D3D4D4; margin-bottom: 64px;}
-h4 {font-family: 'Gothic', serif;text-transform:uppercase; font-size:16px; line-height: 20px; letter-spacing: -0.1px;color:#D3D4D4; margin-bottom: 32px; max-width: 95%;}
+h4 {font-family: 'Gothic', serif;text-transform:uppercase; font-size:16px; line-height: 20px; letter-spacing: -0.1px;color:#D3D4D4; margin-bottom: 32px; max-width: 95%;margin-left: auto; margin-right: auto;}
 a {color: inherit;}
 a:visited {color: inherit;}
-p {font-family: 'Hind', sans-serif; font-size:16px; line-height: 20px;color:#D3D4D4; margin-bottom: 32px; max-width: 95%;}
+p {font-family: 'Hind', sans-serif; font-size:16px; line-height: 20px;color:#D3D4D4; margin-bottom: 32px; max-width: 95%; margin-left: auto; margin-right: auto;}
 .navy h2 {color: #F0BC42;}
 
 
